首页完善中

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>酱油游戏列表</title>
+    <title>游戏列表</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
 
     <meta name="viewport"
@@ -36,10 +36,12 @@
 	</style>
 </head>
 <body>
-	<h2>乐一乐游戏网站欢迎你</h2>
+	<h2>sichuan_coder游戏网站欢迎你</h2>
+	<p>首页完善中...</p>
 	<h3>游戏列表</h3>
 	<ul>
 		<li><a href="/donkey">接驴子</a></li>
+		<li>开发中...</li>
 	</ul>
 </body>
 </html>
